<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pet Care Manager</string>
    <string name="hint_pet_name">Pet Name</string>
    <string name="hint_pet_type">Pet Type (e.g. Dog, Cat)</string>
    <string name="button_add_pet">Save Pet</string>
    <string name="button_select_birthday">Select Birthday</string>
    <string name="label_no_date">No date selected</string>
    <string name="label_selected_date_prefix">Selected Date: %1$s</string>
    <string name="menu_addPetRecord">New Record</string>
    <string name="menu_cancelPetCare">Cancel</string>
    <string name="no_date_selected">No date selected</string>
    <string name="notes">Notes:</string>
    <string name="enter_notes_about_this_pet">Enter notes about this pet</string>
    <string name="feeding_time">Feeding Time:</string>
    <string name="save_details">Save Details</string>
    <string name="hint_pet_notes">Notes…</string>
    <string name="menu_deletePet">Delete</string>
    <string name="seperator">:</string>
    <string name="menu_backPetCare">Back</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_pet_image">Select Pet image</string>
    <string name="pet_image"> Pet Image </string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="save_location">Save Location</string>
    <string name="default_web_client_id">26102870354-8vlrfnaojukdhh10aht1t0klhbss156j.apps.googleusercontent.com</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="add_pet">Add Pet</string>
    <string name="pet_list">Pet List</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name">Name</string>
    <string name="petcare">PetCare</string>
    <string name="manage_your_pets_with_ease">Manage your pets with ease</string>
    <string name="or">OR</string>
    <string name="dark_mode">Dark Mode</string>


</resources>
