<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:id="@+id/nav_list"
        android:title="@string/pet_list"
        android:icon="@drawable/outline_list_24"/>

    <item
        android:id="@+id/nav_add_pet"
        android:title="@string/add_pet"
        android:icon="@drawable/baseline_add_box_24"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/outline_build_24"/>

    <item android:title="@string/profile">

        <menu>


            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/outline_digital_out_of_home_24"/>

        </menu>

    </item>


  
</menu>