<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.petcare.activities.PetRecordDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Pet Details"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/petNameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Charlie" />

        <TextView
            android:id="@+id/petTypeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Dog" />

        <TextView
            android:id="@+id/petBirthdayDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="01/01/2020" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/petNotes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:autofillHints="@string/hint_pet_notes"
            android:inputType="text"
            android:hint="@string/enter_notes_about_this_pet"
            android:gravity="top"
            android:background="@android:drawable/edit_text"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeding_time"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="12dp" />

        <LinearLayout
            android:id="@+id/feedingTimeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <NumberPicker
                android:id="@+id/hourPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seperator"
                android:textSize="24sp"
                android:padding="4dp" />

            <NumberPicker
                android:id="@+id/minutePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <NumberPicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:importantForAccessibility="no"
            android:padding="8dp"
            android:text="@string/button_addImage"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <ImageView
            android:id="@+id/placemarkImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck" />


        <Button
            android:id="@+id/btnSaveDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_details"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp" />
        
    </LinearLayout>
</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>